// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Panel Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    A panel consists of three parts: A header, a body and a footer. You can mostly put whatever you want in any of these, but try not to put too much in the header and footer as these are meant to contain short and concise information about the body content.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      subTitle="Panel subtitle"
      title="Panel title"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelHeaders renders 1`] = `
<Fragment>
  <h2
    id="panel-headers"
  >
    Panel headers
  </h2>
  <p>
    You can pick between two different panel headers, brand color with white text and white with green text. add 
    <CodeTags
      code=".panel-default"
      type="secondary"
    />
     or 
    <CodeTags
      code=".panel-brand"
      type="secondary"
    />
     to the header to use one of them.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      title="Default panel"
    />
    


    <Panel
      title="Panel brand"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel PanelTable renders 1`] = `
<Fragment>
  <h2
    id="panel-with-table"
  >
    Displaying a full width table
  </h2>
  <p>
    To display a full width table in a panel use 
    <CodeTags
      code=".panel-table"
      type="secondary"
    />
     on a div wrapping the table. Put 
    <CodeTags
      code=".panel-table"
      type="secondary"
    />
     as a direct child of 
    <CodeTags
      code=".panel"
      type="secondary"
    />
    . Tables put in a panel are given a border bottom to separate it from the following elements.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Panel
      bodyContent={
        Array [
          "Your main panel content is put here.",
          "Some more content over here.",
          "And one more line, just to be safe.",
        ]
      }
      footerBtnText="Footer button"
      footerText="Footer content goes here."
      panelTable={[Function]}
      subTitle="Panel subtitle"
      title="Panel title"
      type="brand"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Panel TableContent  renders 1`] = `
<table
  className="table"
>
  <thead>
    <tr>
      <th
        scope="col"
      >
        #
      </th>
      <th
        scope="col"
      >
        First Name
      </th>
      <th
        scope="col"
      >
        Last Name
      </th>
      <th
        scope="col"
      >
        Location
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <th
        scope="row"
      >
        1
      </th>
      <td>
        Sven
      </td>
      <td>
        Svensson
      </td>
      <td>
        Visby
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        2
      </th>
      <td>
        Sara
      </td>
      <td>
        Svensson
      </td>
      <td>
        Stockholm
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        3
      </th>
      <td>
        Ola
      </td>
      <td>
        Nordmann
      </td>
      <td>
        Oslo
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        4
      </th>
      <td>
        Holger
      </td>
      <td>
        Danske
      </td>
      <td>
        Copenhagen
      </td>
    </tr>
    <tr>
      <th
        scope="row"
      >
        5
      </th>
      <td>
        Matti
      </td>
      <td>
        Meikäläinen
      </td>
      <td>
        Lahti
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Documentation: Panel renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Panels are large containers meant to be able to contain all of our other components.
  </p>
  <Overview />
  <PanelHeaders />
  <PanelTable />
</DocContainer>
`;
